--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "rc-slider": "^11.1.9",
     "react": "^19.2.0",
     "react-datepicker": "^9.1.0",
     "react-dnd": "^16.0.1",
